--- a/src/index.html
+++ b/src/index.html
@@ -6,11 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/styles.css" />
     <link rel="stylesheet" href="./css/reset.css" />
+
+    <link rel="manifest" href="manifest.webmanifest">
+    <meta name="theme-color">
+
     <title>Document</title>
   </head>
   <body id="body">
     <div id="app"></div>
     <script src="./scripts/script.js"></script>
     <script src="./scripts/changeBackground.js"></script>
+    <script src="./sw.js"></script>
   </body>
 </html>
