add info to index delete manolo index

--- a/src/index.html
+++ b/src/index.html
@@ -8,9 +8,15 @@
     <link rel="stylesheet" href="./css/reset.css" />
 
     <link rel="manifest" href="manifest.webmanifest">
-    <meta name="theme-color">
+    <meta name="theme-color" content="#5baaa1">
 
-    <title>Document</title>
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <link rel="apple-touch-icon" href="./icons/icon-512x512.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="./icons/icon-96x96.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="./icons/icon-128x128.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="./icons/icon-152x152.png">
+
+    <title>Salmos</title>
   </head>
   <body id="body">
     <div id="app"></div>
