--- a/index.html
+++ b/index.html
@@ -4,24 +4,36 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/styles.css" />
-    <link rel="stylesheet" href="./css/reset.css" />
+    <link rel="stylesheet" href="./src/css/reset.css" />
+    <link rel="stylesheet" href="src/css/styles.css" />
 
-    <link rel="manifest" href="manifest.webmanifest">
-    <meta name="theme-color" content="#5baaa1">
+    <link rel="manifest" href="manifest.webmanifest" />
+    <meta name="theme-color" content="#fce803" />
 
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <link rel="apple-touch-icon" href="./icons/icon-512x512.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="./icons/icon-96x96.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="./icons/icon-128x128.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="./icons/icon-152x152.png">
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <link rel="apple-touch-icon" href="./src/icons/icon-512x512.png" />
+    <link
+      rel="apple-touch-icon"
+      sizes="72x72"
+      href="./src/icons/icon-96x96.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="120x120"
+      href="./src/icons/icon-128x128.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="152x152"
+      href="./src/icons/icon-152x152.png"
+    />
 
     <title>Salmos</title>
   </head>
   <body id="body">
     <div id="app"></div>
-    <script src="./scripts/script.js"></script>
-    <script src="./scripts/changeBackground.js"></script>
-    <script src="./sw.js"></script>
+    <script src="./src/scripts/script.js"></script>
+    <script src="./src/scripts/changeBackground.js"></script>
+    <script src="./src/sw.js"></script>
   </body>
 </html>
