--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="src/css/styles.css" />
 
     <link rel="manifest" href="manifest.webmanifest" />
-    <meta name="theme-color" content="#fce803" />
+    <meta name="theme-color" content="" />
 
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <link rel="apple-touch-icon" href="./src/icons/icon-512x512.png" />
