--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./src/css/reset.css" />
-    <link rel="stylesheet" href="src/css/styles.css" />
+    <link rel="stylesheet" href="./src/css/styles.css" />
 
-    <link rel="manifest" href="manifest.webmanifest" />
+    <link rel="manifest" href="./manifest.webmanifest" />
     <meta name="theme-color" content="" />
 
     <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -34,6 +34,6 @@
     <div id="app"></div>
     <script src="./src/scripts/script.js"></script>
     <script src="./src/scripts/changeBackground.js"></script>
-    <script src="./src/sw.js"></script>
+    <script src="./sw.js"></script>
   </body>
 </html>
