-add new apple incons -add tag manager code -add Google analytics code

--- a/index.html
+++ b/index.html
@@ -3,18 +3,17 @@
   <head>
     <!-- Google Tag Manager -->
     <script>
-      (function (w, d, s, l, i) {
-        w[l] = w[l] || [];
-        w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
+      ;(function (w, d, s, l, i) {
+        w[l] = w[l] || []
+        w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" })
         var f = d.getElementsByTagName(s)[0],
           j = d.createElement(s),
-          dl = l != "dataLayer" ? "&l=" + l : "";
-        j.async = true;
-        j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
-        f.parentNode.insertBefore(j, f);
-      })(window, document, "script", "dataLayer", "GTM-KLQLDK6");
+          dl = l != "dataLayer" ? "&l=" + l : ""
+        j.async = true
+        j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl
+        f.parentNode.insertBefore(j, f)
+      })(window, document, "script", "dataLayer", "GTM-KLQLDK6")
     </script>
-    <!-- End Google Tag Manager -->
 
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -26,35 +25,16 @@
     <meta name="theme-color" content="" />
 
     <meta name="apple-mobile-web-app-capable" content="yes" />
-    <link rel="apple-touch-icon" href="./src/icons/icon-512x512.png" />
-    <link
-      rel="apple-touch-icon"
-      sizes="72x72"
-      href="./src/icons/icon-96x96.png"
-    />
-    <link
-      rel="apple-touch-icon"
-      sizes="120x120"
-      href="./src/icons/icon-128x128.png"
-    />
-    <link
-      rel="apple-touch-icon"
-      sizes="152x152"
-      href="./src/icons/icon-152x152.png"
-    />
+    <link rel="apple-touch-icon" href="./src/icons/ios/512.png" />
+    <link rel="apple-touch-icon" sizes="72x72" href="./src/icons/ios/100.png" />
+    <link rel="apple-touch-icon" sizes="120x120" href="./src/icons/ios/128.png" />
+    <link rel="apple-touch-icon" sizes="152x152" href="./src/icons/ios/152.png" />
 
     <title>Salmos</title>
   </head>
   <body id="body">
     <!-- Google Tag Manager (noscript) -->
-    <noscript
-      ><iframe
-        src="https://www.googletagmanager.com/ns.html?id=GTM-KLQLDK6"
-        height="0"
-        width="0"
-        style="display: none; visibility: hidden"
-      ></iframe
-    ></noscript>
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KLQLDK6" height="0" width="0" style="display: none; visibility: hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
 
     <div id="app"></div>
